Refactor xpaths and fixtures to be usable with new builds: • More clear and precise xpaths • Credentials moved to .env • Remove unnecessary sleeps • Fix PEP8

--- a/homework1/.env
+++ b/homework1/.env
@@ -1,2 +1,10 @@
 EMAIL=xesog66260@deitada.com
 PASSWORD=testpassword0.
+
+WRONG_EMAIL=email@mail.com
+INVALID_EMAIL=not_email_or_phone_number
+WRONG_PASSWORD=wrong_password
+
+FULLNAME=Иванов Иван Иванович
+ORDINN=123456789012
+PHONE_NUMBER=+71234567890
