Add UI test for campaign and segment creation • Test: create audio campaign with custom settings • Test: create segment from apps and games • Test: create segment from OK and VK, delete afterwards • Add allure reports • Add xdist compatibility: all test run in parallel

--- a/homework2/.env
+++ b/homework2/.env
@@ -1,2 +1,7 @@
 EMAIL=xesog66260@deitada.com
 PASSWORD=testpassword0.
+
+DEFAULT_AD_LINK=https://github.com/AngrySigma
+
+DEFAULT_VK_GROUP=RWPS::_
+
