--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pytest==7.1.3
 python-dotenv==0.21.0
+requests==2.28.1
 selenium==4.5.0
 webdriver_manager==3.8.3
+pytest-xdist==2.5.0
+faker==15.1.1
