--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-allure_python_commons==2.11.1
+Flask==2.2.2
+PyMySQL==1.0.2
 pytest==7.1.3
 python-dotenv==0.21.0
-selenium==4.5.0
+requests==2.28.1
+selenium==4.6.0
 webdriver_manager==3.8.3
 PyMySQL~=1.0.2
 SQLAlchemy~=1.4.44
